{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 54,
  "lineage": "c10241e9-0594-d991-b2f4-91a9866011cf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wsvpc_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:862066027316:instance/i-0e86c5a0be3643486",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e86c5a0be3643486",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "corp_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09f14e3439f1717c4",
            "private_dns": "ip-196-0-1-60.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "196.0.1.60",
            "public_dns": "ec2-54-91-149-15.compute-1.amazonaws.com",
            "public_ip": "54.91.149.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06ab177a2c031ac0c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-043f14ad8340ef369",
            "tags": {
              "Name": "uat-instance"
            },
            "tags_all": {
              "Name": "uat-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07b185d0b11abb8d0"
            ]
          },
          "dependencies": [
            "aws_subnet.session1",
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "session_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:internet-gateway/igw-031b55951b005f132",
            "id": "igw-031b55951b005f132",
            "owner_id": "862066027316",
            "tags": {
              "Name": "uat-igw"
            },
            "tags_all": {
              "Name": "uat-igw"
            },
            "vpc_id": "vpc-08d0a5ebb6b5cb286"
          },
          "dependencies": [
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "session-rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:route-table/rtb-0949075d83643db27",
            "id": "rtb-0949075d83643db27",
            "owner_id": "862066027316",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-031b55951b005f132",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "uat-pub-rt"
            },
            "tags_all": {
              "Name": "uat-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d0a5ebb6b5cb286"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.session_igw",
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "session-rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:route-table/rtb-082368d07a83c0562",
            "id": "rtb-082368d07a83c0562",
            "owner_id": "862066027316",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "uat-pri-rt"
            },
            "tags_all": {
              "Name": "uat-pri-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d0a5ebb6b5cb286"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "session1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052ba597fddf463b8",
            "route_table_id": "rtb-0949075d83643db27",
            "subnet_id": "subnet-043f14ad8340ef369"
          },
          "dependencies": [
            "aws_internet_gateway.session_igw",
            "aws_route_table.session-rt1",
            "aws_subnet.session1",
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "session2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9855a139f1911dd",
            "route_table_id": "rtb-0949075d83643db27",
            "subnet_id": "subnet-07bef714a0aa43bc1"
          },
          "dependencies": [
            "aws_internet_gateway.session_igw",
            "aws_route_table.session-rt1",
            "aws_subnet.session2",
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "session3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0573e8f19235b8ea9",
            "route_table_id": "rtb-082368d07a83c0562",
            "subnet_id": "subnet-066779f63c49448a7"
          },
          "dependencies": [
            "aws_route_table.session-rt2",
            "aws_subnet.session3",
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "session4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0573e8f19235b8ea9",
            "route_table_id": "rtb-082368d07a83c0562",
            "subnet_id": "subnet-066779f63c49448a7"
          },
          "dependencies": [
            "aws_route_table.session-rt2",
            "aws_subnet.session3",
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:security-group/sg-00d0494790ae25559",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-00d0494790ae25559",
            "ingress": [],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "862066027316",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pub-sg"
            },
            "tags_all": {
              "Name": "pub-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d0a5ebb6b5cb286"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "session1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:subnet/subnet-043f14ad8340ef369",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "196.0.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043f14ad8340ef369",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uat-pub-subnet1"
            },
            "tags_all": {
              "Name": "uat-pub-subnet1"
            },
            "vpc_id": "vpc-08d0a5ebb6b5cb286"
          },
          "dependencies": [
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "session2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:subnet/subnet-07bef714a0aa43bc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "196.0.2.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bef714a0aa43bc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uat-pub-subnet2"
            },
            "tags_all": {
              "Name": "uat-pub-subnet2"
            },
            "vpc_id": "vpc-08d0a5ebb6b5cb286"
          },
          "dependencies": [
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "session3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:subnet/subnet-066779f63c49448a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "196.0.3.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066779f63c49448a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uat-pri-subnet1"
            },
            "tags_all": {
              "Name": "uat-pri-subnet1"
            },
            "vpc_id": "vpc-08d0a5ebb6b5cb286"
          },
          "dependencies": [
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "session4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:subnet/subnet-08605baed28db447e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "196.0.4.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08605baed28db447e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "862066027316",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uat-pri-subnet2"
            },
            "tags_all": {
              "Name": "uat-pri-subnet2"
            },
            "vpc_id": "vpc-08d0a5ebb6b5cb286"
          },
          "dependencies": [
            "aws_vpc.session"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "session",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:862066027316:vpc/vpc-08d0a5ebb6b5cb286",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "196.0.0.0/16",
            "default_network_acl_id": "acl-01d37df203ba525cd",
            "default_route_table_id": "rtb-02e61f1404887ae93",
            "default_security_group_id": "sg-07b185d0b11abb8d0",
            "dhcp_options_id": "dopt-04a1e7bf9456ee3aa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08d0a5ebb6b5cb286",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02e61f1404887ae93",
            "owner_id": "862066027316",
            "tags": {
              "Name": "uat"
            },
            "tags_all": {
              "Name": "uat"
            }
          }
        }
      ]
    }
  ]
}